# qpid-interop-test-2.0

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL_CONCURRENT_EXECUTION.md  BROKER_SETUP.md  CI_CD_INTEGRATION_SUMMARY.md  CI_CD_SETUP.md  CPP_SHIM_STATUS.md  DOCKER_BROKER_TODO.md  DOTNET_SHIM_STATUS.md  FINAL_STATUS.md  FINAL_STATUS_WITH_DOTNET.md  Jenkinsfile  PHASE1_COMPLETE.md  PHASE1_STATUS.md  README.md  debug_message_encoding.py  pyproject.toml  test_manual.py  test_python_jms_mode.py
.jenkins/: README.md
docker/: Dockerfile.artemis  README.md  README_DOCKER_STATUS.md  broker.xml.snippet  compose.yaml  configure-broker.sh
scripts/: run-ci-locally.sh  setup-local-broker.sh
shims/cpp-proton/: CMakeLists.txt  README.md  shim.sh
shims/cpp-proton/include/: qit_shim.hpp
shims/cpp-proton/src/: main.cpp  receiver.cpp  sender.cpp  type_codec.cpp
shims/dotnet-proton/: BUILD.md  QitShim.csproj  README.md  shim.sh
shims/dotnet-proton/src/: Program.cs  Receiver.cs  Sender.cs  TypeCodec.cs
shims/java-protonj2/: BUILD.md  pom.xml  shim.sh
shims/java-protonj2/src/main/java/org/apache/qpid/qit/: Receiver.java  Sender.java  ShimMain.java  TypeCodec.java
shims/java-qpid-jms/: pom.xml  receiver.sh  sender.sh
shims/java-qpid-jms/src/main/java/org/apache/qpid/qit/: JmsReceiver.java  JmsSender.java
shims/javascript-rhea/: KNOWN_ISSUES.md  TYPE_DETECTION_FIX.md  package.json  shim.js  shim.sh
shims/python-proton/: README.md  shim.py  shim.sh
src/qit/: __init__.py
src/qit/cli/: __init__.py  main.py
src/qit/core/: __init__.py  broker.py  comparison.py  orchestrator.py  shim.py
src/qit/types/: __init__.py  primitives.py
tests/: __init__.py  test_comparison.py  test_jms.py  test_jms_interop.py  test_jms_unified.py  test_types.py
